Published slides and video for today's 322 class 	modified:   F20/322/322F20DN.HTM

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -123,12 +123,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/183364275/download?download_frd=1"><!-- -->
-	  9/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/17<!-- --</a><!-- --></td>
+	  9/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/183652890/download?download_frd=1"><!-- -->
+      9/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=207FYGFzWso">VIDEO</a></small><!-- --> More Miller, differentiator, op-amp imperfections, <i>V<sub>OS</sub></i>, <i>I<sub>Bias</sub>, <i>f<sub>t</sub></i>, <I>SR</i><!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=207FYGFzWso">VIDEO</a></small><!-- --> More Miller, differentiator, op-amp imperfections, <i>V<sub>OS</sub></i>, <i>I<sub>Bias</sub></i>, <i>f<sub>t</sub></i>, <I>SR</i><!--end comment--><br>
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=og3syBHhVNU">VIDEO</a></small><!-- --> <b>Ch 4</b> Diodes: ideal char., guessing diode states, How Si diodes work<!--end comment--></td>  
    </TR><!-- Week of 9/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
