Udated errata on Sedra Smith 8e 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 8/27/2020)<br> 
+                    (last update 9/18/2020)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -134,8 +134,12 @@ Page 131,  Problem D2.92</b><br>
    &quot;3-dB frequency&quot; should be, &quot;&ndash;3-dB 
    frequency&quot;  Alternatively, add the word, 
    &quot;down&quot; so that the phrase reads, &quot;3 dB
-   down frequency.&quot; 
-   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020, updated 8/27/2020)
+   down frequency.&quot; Also change the end of the problem 
+   statement from "How many pulses are required for an output
+   voltage of 1 V." to "How many pulses are required for an 
+   output voltage change of 1 V in magnitude."<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020, 
+   updated 8/27/2020, updated again 9/18/2020)
                                              </i></small><br><br>
    
                                            <A NAME="P239"></A><b>
@@ -375,6 +379,12 @@ Page 731, Figure 10.26 (a).</b><br>
    >Parallel (operator)</a> <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    <i>(Posted 7/23/2020)</i></small></blockquote>
      
+                                           <A NAME="L4_92"></A><b>
+Appendix L, Page L-3, Answer to Problem 2.92.</b><br>
+   The value given for <i>C</i> is wrong.  The correct value is <i>C</i> = 39.8 pF.<br> 
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 9/18/2020)</small></i><br><br>
+      
                                            <A NAME="L4_4P64"></A><b>
 Appendix L, Page L-4, Answer to Problem 4.64.</b><br>
    There are errors of precision and other errors in the answers given.<br> 
