Published returned date for 322 PS#4, solutions for 322 PS#2, added corrections in errata 	modified:   F20/322/322F20PS.HTM 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/17/2020 9:40 pm)
+                                >(Last update: 9/21/2020 2:18 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -124,9 +124,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29254171"
 		>9/17</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br>-->
+		9/21<!--<a href=
+        "https://dordt.instructure.com/files/184022607/download?download_frd=1"
+        >9/21</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Op-amp imperfections, slew rate,       <br>&nbsp;
 		full power bandwidth                           <br>&nbsp;
@@ -135,7 +135,13 @@ PS                                                           <BR>
 		<DO>Do 2.87, +D2.92, +2.126, +D*2.127</DO>     <br>&nbsp;
 		                                               <br>&nbsp;
         Note errata on Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P131B"
+                      >D2.87</a>                       <br>&nbsp;
+        Note errata on Problem <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P131"
+                      >D2.92</a>                       <br>&nbsp;
+        Note errata on the answer to Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#L4_92"
                       >D2.92</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -183,9 +189,9 @@ PS                                                           <BR>
 		>9/03</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		9/07<!--<a href=
-        "https://dordt.instructure.com/files/134086786/download?download_frd=1"
-        >9/10</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/184022607/download?download_frd=1"
+        >9/07</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Frequency content of signals, amplifier<br>&nbsp; 
 		input resistance, output resistance, gain, dB, <br>&nbsp;
