--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 9/18/2020)<br> 
+                    (last update 9/21/2020)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -128,18 +128,25 @@ Page 122-123,  Problem D2.36 part (d)</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020)
                                              </i></small><br><br>
    
+                                            <A NAME="P131B"></A><b>
+Page 131,  Problem D2.87</b><br>
+   Change the end of the problem statement from "How many 
+   pulses are required for an output voltage of 1 V." to 
+   "How many pulses are required for an output voltage 
+   change of 1 V in magnitude."<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <small><i>(Posted 9/21/2020)
+                                             </i></small><br><br>
+   
                                             <A NAME="P131"></A><b>
 Page 131,  Problem D2.92</b><br>
    In the problem statement two instances of the phrase, 
    &quot;3-dB frequency&quot; should be, &quot;&ndash;3-dB 
    frequency&quot;  Alternatively, add the word, 
    &quot;down&quot; so that the phrase reads, &quot;3 dB
-   down frequency.&quot; Also change the end of the problem 
-   statement from "How many pulses are required for an output
-   voltage of 1 V." to "How many pulses are required for an 
-   output voltage change of 1 V in magnitude."<br>
+   down frequency.&quot; <br>
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020, 
-   updated 8/27/2020, updated again 9/18/2020)
+   updated 8/27/2020)
                                              </i></small><br><br>
    
                                            <A NAME="P239"></A><b>
