Posted today's slides and video for 322 class. 	modified:   F20/322/322F20DN.HTM

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -131,13 +131,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=og3syBHhVNU">VIDEO</a></small><!-- --> <b>Ch 4</b> Diodes: ideal char., guessing diode states, How Si diodes work<!--end comment--></td>  
    </TR><!-- Week of 9/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/22<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/184276920/download?download_frd=1"><!-- -->
+	  9/22<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       9/24<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=wT8Wupm01-g">VIDEO</a></small><!-- --> Diodes: photovoltaic, reverse breakdown;  Shockley equation <!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
    </TR><!-- Week of 9/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
