--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/22/2020 7:45 pm)
+                               >(Last update: 9/22/2020 9:11 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -214,9 +214,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29214333"
 		>9/15</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/155135018/download?download_frd=1"
-		>9/26</a>--><br>        
+        <a href=
+		"https://dordt.instructure.com/files/184284288/download?download_frd=1"
+		>9/15</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
@@ -242,9 +242,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
 		>9/08</a><br>
     <!-- Returned -->        </TD><TD align="center" valign="top">
-        9/10<!--<a href=
-		"https://dordt.instructure.com/files/154671686/download?download_frd=1"
-		>9/17</a><br> -->
+        <a href=
+		"https://dordt.instructure.com/files/184283387/download?download_frd=1"
+		>9/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
