--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/22/2020 9:11 pm)
+                               >(Last update: 9/23/2020 5:59 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -142,9 +142,9 @@ PS                                                       </small>
         &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
 		>9/22</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/155135018/download?download_frd=1"
-		>9/26</a>--><br>        
+        <a href=
+		"https://dordt.instructure.com/files/184395484/download?download_frd=1"
+		>9/23</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
