EGR 322 posted solutions to PS# 3, 4, 5 in prep for test on Thursday 	modified:   F20/322/322F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/25/2020 3:20 pm)
+                                >(Last update: 9/29/2020 7:14 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -96,7 +96,7 @@ PS                                                           <BR>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br>-->
+        >9/28</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Various models of real diodes under   <br>&nbsp;
 		fwd and rev bias, rev breakdown, small-signal, <br>&nbsp;
@@ -108,7 +108,7 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
         Note errata on Problem <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P239"
-                      >D4.64</a>
+                      >D*4.64</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
@@ -121,9 +121,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29380815"
 		>9/24</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/185289395/download?download_frd=1"
+        >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Ideal, models of real diodes under    <br>&nbsp;
 		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
@@ -151,9 +151,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29254171"
 		>9/17</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		9/21<!--<a href=
-        "https://dordt.instructure.com/files/184022607/download?download_frd=1"
-        >9/21</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/185289342/download?download_frd=1"
+        >9/21</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Op-amp imperfections, slew rate,       <br>&nbsp;
 		full power bandwidth                           <br>&nbsp;
@@ -183,9 +183,9 @@ PS                                                           <BR>
 		>9/10</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		9/14<!--<a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/185289215/download?download_frd=1"
+        >9/14</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Op-amp configurations (inverting, sum,<br>&nbsp;
 		etc.), differential and instrumentation amps.  <br>&nbsp;
