Published slides and video for 363 	modified:   F20/363/363F20DN.HTM

--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -140,13 +140,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Test #1</font><!--end comment--></td>  
    </TR><!-- Week of 9/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/29<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/185302129/download?download_frd=1"><!-- -->
+	  9/29<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/1<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=ZArFV8EHTww">VIDEO</a></small><!-- --> F.S. properties: half-wave sym, Parseval's, Intro Fourier Transform <!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
    </TR><!-- Week of 10/04 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
