publishing slides for 322 and 323 today

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -151,13 +151,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Test #1</font><!--end comment--></td>  
    </TR><!-- Week of 10/04 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/06<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/186017499/download?download_frd=1"><!-- -->
+	  10/06<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/08<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- -->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Ripple V, pk diode I; full-wave, bridge, limiters, clamps, doublers.<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
    </TR><!-- Week of 10/11 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
