updates homework pages for 322, 363 	modified:   F20/322/322F20PS.HTM 	modified:   F20/363/363F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 9/29/2020 7:14 pm)
+                                >(Last update: 10/08/2020 10:40 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -81,7 +81,64 @@ PS                                                           <BR>
    <!-- Assignment -->
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
-   (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)       </DIV></B>
+   (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/08
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/15<!--<a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/xxxxxxxxxx"
+		>10/15</a>-->
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/136840987/download?download_frd=1"
+        >10/24</a>--><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Rectifiers, limiters, clamps, special <br>&nbsp;
+		diodes.                                        <br>&nbsp;
+		Read 4.5 through 4.7, and 5.1.1 through 5.1.5. <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do 4.4 part k only, 4.68, +4.69, +4.75,    <br>&nbsp;
+		4.76, +*4.78, *4.88 parts a, b only, 5.1,     <br>&nbsp;
+		+D5.5, +5.13, +5.18.</DO>                             <br>&nbsp;
+		                                               <br>&nbsp;
+		Computer assistance is recommended for         <br>&nbsp;
+		problems involving rectifiers.                 <br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P240A"
+		>errata to problem 4.76</a>		           <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P240_B"
+		>clarification of problem 4.76</a>	           <br>&nbsp;	
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P293"
+		>errata to problem 5.5</a>		               <br>&nbsp;
+		                                               <br>&nbsp;
+		Optional reading in the Wikipedia:             <br>&nbsp;
+		<a href="https://en.wikipedia.org/wiki/Voltage_multiplier"
+		>Voltage multiplier</a> and related <a href=
+		"https://en.wikipedia.org/wiki/Voltage_doubler"
+		>V doubler</a>                       <br>&nbsp;
+		<a href="https://en.wikipedia.org/wiki/Zener_diode"
+		>Zener diode</a> and related <a href=
+		"https://en.wikipedia.org/wiki/Avalanche_diode"
+		>Avalanche diode</a>                           <br>&nbsp;
+		<a href="https://en.wikipedia.org/wiki/Light-emitting_diode"
+		>Light-emitting diode</a>                      <br>&nbsp;
+		<a href="https://en.wikipedia.org/wiki/Solar_cell"
+		>Solar cell</a> and related <a href=
+		"https://en.wikipedia.org/wiki/Photodiode"
+		>photodiode</a>                                <br>&nbsp;
+		<a href="https://en.wikipedia.org/wiki/Varicap"
+		>Varicap</a> (a.k.a. Varactor)                 <br>&nbsp;
+        <a href="https://en.wikipedia.org/wiki/Selenium_rectifier"
+        >Selenium rectifier</a>.  
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
