--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/06/2020 7:29 pm)
+                               >(Last update: 10/08/2020 10:40 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -124,7 +124,7 @@ PS                                                       </small>
         &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29450020"
 		>10/06</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        10/08<!--<a href=
 		"https://dordt.instructure.com/files/157379534/download?download_frd=1"
 		>10/31</a><br>-->        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
