Published slides, video  for EGR 363 today 	modified:   F20/363/363F20DN.HTM

--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -162,12 +162,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/186773150/download?download_frd=1"><!-- -->
-	  10/13<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/15<!-- --</a><!-- --></td>
+	  10/13<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/186939699/download?download_frd=1"><!-- -->
+      10/15<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=xW7f26rz5wY">VIDEO</a></small><!-- --> DSB-LC defined, Envelope Detect, Power of DSB-LC, Modulation HW<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=CXGjtJ-cGkU">VIDEO</a></small><!-- --> Ring modulator, QAM defined, Applications of QAM, analog video<!--end comment--></td>  
    </TR><!-- Week of 10/18 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
