--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -163,12 +163,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/186777416/download?download_frd=1"><!-- -->
-	  10/13<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/15<!-- --</a><!-- --></td>
+	  10/13<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/186976428/download?download_frd=1"><!-- -->
+      10/15<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=tNTMjiY5ZXA">VIDEO</a></small><!-- --> The operation of a MOSFET: Off, Triode, Saturation modes<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=cra4RqCDEoo">VIDEO</a></small><!-- --> p-channel MOSFET, CMOS, schematic symbols, Early effect<!--end comment--></td>  
    </TR><!-- Week of 10/18 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
