Published EGR 322 PS#8, updated errata Sedra Smith 8th problem 5.30 	modified:   F20/322/322F20PS.HTM 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 10/08/2020 10:03 pm)
+                                >(Last update: 10/15/2020 8:53 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,33 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/15
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/22
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp; <!--<a href=
+        "https://dordt.instructure.com/files/137196859/download?download_frd=1"
+        >10/29</a><br>-->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
+		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
+		Read 5.1.6 through end of chapter.             <br>&nbsp;
+		                                               <br>&nbsp;
+		Do<DO> 5.17, 5.23, 5.30, D5.43, D5.48, 5.67.</DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P295"
+		>errata on Problem 5.23</a>		               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P296"
+		>errata on Problem 5.30</a>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  7
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -103,7 +130,7 @@ PS                                                           <BR>
 		diodes.                                        <br>&nbsp;
 		Read 4.5 through 4.7, and 5.1.1 through 5.1.5. <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do 4.4 part k only, 4.68, +4.69, +4.75,    <br>&nbsp;
+		Do<DO> 4.4 part k only, 4.68, +4.69, +4.75,    <br>&nbsp;
 		4.76, +*4.78, *4.88 parts a, b only, 5.1,     <br>&nbsp;
 		+D5.5, +5.13, +5.18.</DO>                             <br>&nbsp;
 		                                               <br>&nbsp;
@@ -151,7 +178,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29488310"
 		>10/08</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		10/12<!--<a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/28</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
