--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 9/21/2020)<br> 
+                    (last update 10/15/2020)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -219,12 +219,12 @@ Page 295, Problem 5.23</b><BR>
 		
                                            <A NAME="P296"></A><b>
 Page 296, Problem 5.30</b><BR>
-   Add "in saturation" at the end of the first line of the 
-   problem statement so that the first line becomes,         <br>
-   "A particular MOSFET has <i>V<sub>A</sub></i> = 10 V.
-   For operation in saturation"                           <br>
+   In the second sentence, add "in saturation" after the word 
+   "operation" so that the problem statement becomes, "A 
+   particular MOSFET has <i>V<sub>A</sub></i> = 10 V.
+   For operation in saturation at. . ."                           <br>
              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
-        (Posted 7/23/2020)                 </i></small><br><br>
+        (Posted 7/23/2020, updated 10/15/2020)</i></small><br><br>
 
                                           <A NAME="P371"></A><b>
 Page 371,  Figure 7.4(b)--Incorrectly shaped slope between Q and B. </b><br>
