Linked 322 PS#8 into Canvas for turn-in. 	modified:   F20/322/322F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -90,8 +90,9 @@ PS                                                           <BR>
         10/15
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        10/22
-        
+                <a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/29742280"
+		>10/22</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp; <!--<a href=
         "https://dordt.instructure.com/files/137196859/download?download_frd=1"
