--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/14/2020 12:01 pm)
+                               >(Last update: 10/19/2020 3:53 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -104,6 +104,7 @@ PS                                                       </small>
         <DO>Do 3.2, 3.3, Repeat 3.3 using DSB-LC, 3.5 </DO><br>&nbsp;
                                                        <br>&nbsp;
         On problem 3.3, Let <i>f<sub>0</sub></i> = 5 Hz and let <i>A<sub></sub></i> = 1 V.<br>&nbsp;		
+		Also let the modulation index <i>a</i> = 1.0.  <br>&nbsp;
 		Use a computer to make your plots.  It is too <br>&nbsp;
 		tedious to achieve the needed plot accuracy   <br>&nbsp;
 		when plotting by hand.  Matlab,  Desmos, and  <br>&nbsp;
