Published textbook requisition for EGR 323, S21 	new file:   S21/323/323S21_Textbook_Requisitions.htm 	new file:   S21/323/323S21_Textbook_Requisitions.png 	new file:   S21/323/Sedra_Smith_8th_Cover.png 	modified:   Texts.htm

--- a/Texts.htm
+++ b/Texts.htm
@@ -36,7 +36,7 @@
    <p align="center"><a href="index.html"
             >Professor De Boer's</a> Textbook Requisitions</b></p>
                                                        <p align="center">
-          (Last updated on Tuesday, June 2, 2020)</p><p>
+          (Last updated on Friday, October 23, 2020)</p><p>
    
    The links below will show you which textbooks Professor De Boer has 
    ordered for each of his courses.  (For ISBNs and full details, click 
@@ -51,29 +51,18 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Fall 2020 courses</b></u>
+   <br><u><b>Spring 2021 course</b></u>
    </td></tr></table>
    
    
    <table align="center" width="520" border="0" cellpadding="0">
  
  <!--EGR 322--> 
-   <tr><td colspan="2"><a href="F20/322/322F20_Textbook_Requisitions.htm">
-       EGR 322, Electronics I (with lab)</a></td></tr>
+   <tr><td colspan="2"><a href="S21/323/323S21_Textbook_Requisitions.htm">
+       EGR 323, Electronics II (with lab)</a></td></tr>
    <tr><td width="180">
-       <a href="F20/322/322F20_Textbook_Requisitions.htm">
-       <img src="F20/322/Sedra_Smith_8th_Cover.png" style="border-style: none"/>
-       <br><br></td>
-       <td valign="top">
-	   &nbsp;
-   </td></tr>
-	
- <!--EGR 363--> 
-   <tr><td colspan="2"><a href="F20/363/363F20_Textbook_Requisitions.png">
-       EGR 363, Introduction to Communication Systems</a></td></tr>
-   <tr><td width="120">
-       <a href="F20/363/363F20_Textbook_Requisitions.png">
-       <img src="F20/363/Proakis_Salehi_Cover_116x163_tumbnail.jpg" style="border-style: none"/>
+       <a href="S21/323/323S21_Textbook_Requisitions.htm">
+       <img src="S21/323/Sedra_Smith_8th_Cover.png" style="border-style: none"/>
        <br><br></td>
        <td valign="top">
 	   &nbsp;
@@ -88,6 +77,13 @@
 </table>
 <table align="center" width="520" border=0 cellpadding=0><tr><td><small>
    <b>Past Courses Instructed by Professor De Boer</b><br><br>
+   
+   
+   <br><u><b>Fall 2020 courses</b></u><br>
+   <a href="F20/322/322F20_Textbook_Requisitions.htm">
+      EGR 322, ELectronics I (with lab)</a><br>
+   <a href="F20/363/363F20_Textbook_Requisitions.png">
+      EGR 363, Introduction to Communication Systems</a><br>
    
    <br><u><b>Spring 2020 course</b></u><br>
    <a href="S20/304/304S20_Textbook_Requisitions.png">
