--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/22/2020 10:05 pm)
+                              >(Last update: 10/27/2020 12:22 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -117,7 +117,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29742280"
 		>10/22</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp; <!--<a href=
+		10/26 <!--<a href=
         "https://dordt.instructure.com/files/137196859/download?download_frd=1"
         >10/29</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -146,9 +146,9 @@ PS                                                           <BR>
 		>10/15</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		10/22<!--<a href=
-        "https://dordt.instructure.com/files/136840987/download?download_frd=1"
-        >10/24</a>--><br>
+		<a href=
+        "https://dordt.instructure.com/files/188147612/download?download_frd=1"
+        >10/22</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Rectifiers, limiters, clamps, special <br>&nbsp;
 		diodes.                                        <br>&nbsp;
