--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/20/2020 8:37 pm)
+                               >(Last update: 10/27/2020 12:22 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -116,7 +116,7 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29715468"
 		>10/20</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        10/27<!--<a href=
 		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
 		>11/13</a><br>-->        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -158,9 +158,9 @@ PS                                                       </small>
         &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29636978"
 		>10/13</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
-		>10/31</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/188147860/download?download_frd=1"
+		>10/14</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Transform                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
