--- a/S21/323/323S21_Textbook_Requisitions.htm
+++ b/S21/323/323S21_Textbook_Requisitions.htm
@@ -27,9 +27,9 @@ The textbook can be rented from
 <a href="https://www.vitalsource.com/products/microelectronic-circuits-adel-s-sedra-kenneth-c-kc-v9780190853532"
 >Vitalsource</a> or <a href="https://www.redshelf.com/book/1504399/microelectronic-circuits-1504399-9780190853532-adel-s-sedra-kenneth-c-kc-smith-tony-chan-carusone-vincent-gaudet"
 >Redshelf</a>.  A rental includes a valid <br>
-access code.  The semester duration will be from January 7, 2021 to May 7, 2021, a <br>
-duration of 120 days.  Understand when your rental days begin to be counted and be <br>
-sure the duration will last through May 6.
+access code to the "locked" content.  The semester duration will be from January 7, <br>
+2021 to May 7, 2021, a duration of 120 days.  Understand when your rental days <br>
+begin to be counted and be sure the duration will last through May 6.
 </p>
 
 </td></tr></table></body>
