--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/27/2020 12:22 am)
+                               >(Last update: 10/27/2020 8:35 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -85,6 +85,29 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
+10
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/27<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/29790062"
+		>11/03</a><br>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
+		>11/13</a><br>-->        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		         Superheterodyne tuning                <br>&nbsp;
+        Reveiw Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3<br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>2.51, 2.59.1, 3.24</DO>                 <br>&nbsp;
+                                                       <br>&nbsp;
+        Note:  We have already covered Section 2.3 in  <br>&nbsp;
+		class a week or more ago.  
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
  9
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -101,7 +124,7 @@ PS                                                       </small>
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
         Read Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3  <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.47, 2.50, 3.11, 3.14</DO>             <br>&nbsp;
+        Do <DO>2.47, 2.50, 3.11, 3.14</DO>             <br>&nbsp;
                                                        <br>&nbsp;
         Note:  We have already covered Section 2.3 in  <br>&nbsp;
 		class a week or more ago.  
@@ -123,7 +146,7 @@ PS                                                       </small>
         Topics:  Linear Modulation, DSB-SC             <br>&nbsp;
         Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 3.2, 3.3, Repeat 3.3 using DSB-LC, 3.5 </DO><br>&nbsp;
+        Do <DO>3.2, 3.3, Repeat 3.3 using DSB-LC, 3.5 </DO><br>&nbsp;
                                                        <br>&nbsp;
         On problem 3.3, Let <i>f<sub>0</sub></i> = 5 Hz and let <i>A<sub></sub></i> = 1 V.<br>&nbsp;		
 		Also let the modulation index <i>a</i> = 1.0.  <br>&nbsp;
@@ -165,7 +188,7 @@ PS                                                       </small>
         Topics:  Fourier Transform                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.39.6, 2.43 part (b) only, 2.46.2</DO> <br>&nbsp;
+        Do <DO>2.39.6, 2.43 part (b) only, 2.46.2</DO> <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Hints:</b>                                  <br>&nbsp;
 		See all the hints for PS#5 below.              <br>&nbsp;
@@ -195,7 +218,7 @@ PS                                                       </small>
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.39.2, 2.39.5, 2.42</DO>               <br>&nbsp;
+        Do <DO>2.39.2, 2.39.5, 2.42</DO>               <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Hints:</b>                                  <br>&nbsp;
 		See all the hints for PS#5 below.              <br>&nbsp;
@@ -243,7 +266,7 @@ PS                                                       </small>
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.36, 2.39.1, 2.39.4</DO>                     <br>&nbsp;
+        Do <DO>2.36, 2.39.1, 2.39.4</DO>                     <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Hints:</b>                                  <br>&nbsp;
 		For problem 2.36 the author expects you to let <br>&nbsp;
@@ -320,7 +343,7 @@ PS                                                       </small>
 		tedious (hence not assigned), but the theorems <br>&nbsp;
 		are famous.                                    <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.31, 2.34, 2.35</DO>                   <br>&nbsp;
+        Do <DO>2.31, 2.34, 2.35</DO>                   <br>&nbsp;
 		                                               <br>&nbsp;
 		Do the problem statements look like gibberish  <br>&nbsp;
 		to you?  Try reading them entirely spelled out <br>&nbsp;
@@ -343,7 +366,7 @@ PS                                                       </small>
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
                                                        <br>&nbsp;
-        <DO>Do 2.7, 2.16, 2.24, 2.28</DO>
+        Do <DO>2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  2
@@ -363,7 +386,7 @@ PS                                                       </small>
         Topics: Types of signals & systems             <br>&nbsp;
         Read: Ch 1 Sec. 1.4, Ch.2 through Sec. 2.1     <br>&nbsp;
                                                        <br>&nbsp;
-        <DO>Do (p. 101) 2.1 (all parts), 2.5, 2.6</DO> <br>&nbsp;
+        Do <DO>(p. 101) 2.1 (all parts), 2.5, 2.6</DO> <br>&nbsp;
         Use a computer to make the plots for 2.1.      <br>&nbsp;
         Octave or Matlab are recommended.              <br>&nbsp;
         Here is a <a href="p2_1_starter.pdf"
