--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 10/15/2020)<br> 
+                    (last update 10/28/2020)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -225,6 +225,13 @@ Page 296, Problem 5.30</b><BR>
    For operation in saturation at. . ."                           <br>
              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
         (Posted 7/23/2020, updated 10/15/2020)</i></small><br><br>
+
+                                           <A NAME="P357"></A><b>
+Page 357, Answer to Problem 6.28 (a)</b><BR>
+   There is a sign error n the answer for <i>I</i><sub>1</sub>.<br>
+   The correct answer is <i>I</i><sub>1</sub> = +1 mA.<br>
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
+        (Posted 10/28/2020)</i></small><br><br>
 
                                           <A NAME="P371"></A><b>
 Page 371,  Figure 7.4(b)--Incorrectly shaped slope between Q and B. </b><br>
