Updated the errata for Sedra, Smith Problem 6.28(a) page 357 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -228,7 +228,8 @@ Page 296, Problem 5.30</b><BR>
 
                                            <A NAME="P357"></A><b>
 Page 357, Answer to Problem 6.28 (a)</b><BR>
-   There is a sign error n the answer for <i>I</i><sub>1</sub>.<br>
+   In some electronic editions of the textbook there is a sign <br>
+   error in the answer for <i>I</i><sub>1</sub>.
    The correct answer is <i>I</i><sub>1</sub> = +1 mA.<br>
              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
         (Posted 10/28/2020)</i></small><br><br>
