--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/27/2020 12:22 am)
+                              >(Last update: 10/28/2020 5:21 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -104,7 +104,11 @@ PS                                                           <BR>
 		Read 6.1, 6.2                                  <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do                                         <br>&nbsp;
-		6.1, +6.2, +6.8, 6.9, +6.10, +6.12, +6.28, 6.29.</DO>		
+		6.1, +6.2, +6.8, 6.9, +6.10, +6.12, +6.28, 6.29.</DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P357"
+		>errata on the answer to Problem 6.28A</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  8
