--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/27/2020 8:35 pm)
+                               >(Last update: 10/28/2020 8:23 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -117,9 +117,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29790062"
 		>10/27</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        10/28<!--<a href=
 		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
-		>11/13</a><br>-->        
+		>10/28</a><br>-->        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
         Read Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3  <br>&nbsp;
@@ -139,9 +139,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29715468"
 		>10/20</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        10/27<!--<a href=
-		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
-		>11/13</a><br>-->        
+        <a href=
+		"https://dordt.instructure.com/files/188379567/download?download_frd=1"
+		>10/27</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linear Modulation, DSB-SC             <br>&nbsp;
         Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
